<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_udacity"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/top_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/top_view"
            app:layout_constraintTop_toBottomOf="@+id/top_view"
            app:srcCompat="@drawable/udacity"
            android:scaleType="centerCrop"
            android:contentDescription="@string/udacity_logo" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_udacity" />

        <TextView
            android:id="@+id/txt_questionNumber_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_number_one"
            style="@style/QuestionNumberStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/txt_question_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/question_one_text"
            style="@style/QuestionsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_questionNumber_one"
            app:layout_constraintTop_toTopOf="@+id/txt_questionNumber_one" />

        <RadioGroup
            android:id="@+id/rbtn_question_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/txt_question_one"
            app:layout_constraintTop_toBottomOf="@+id/txt_question_one">

            <RadioButton
                android:id="@+id/questionOne_OptionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OptionsTextStyle"
                android:text="@string/questionOne_optionOne" />

            <RadioButton
                android:id="@+id/questionOne_OptionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                style="@style/OptionsTextStyle"
                android:text="@string/questionOne_optionTwo" />
        </RadioGroup>

        <View
            android:id="@+id/divider_one"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/rbtn_question_one"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txt_questionNumber_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_number_two"
            style="@style/QuestionNumberStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_one" />

        <TextView
            android:id="@+id/txt_question_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/question_two_text"
            style="@style/QuestionsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_questionNumber_two"
            app:layout_constraintTop_toTopOf="@+id/txt_questionNumber_two" />

        <RadioGroup
            android:id="@+id/rbtn_question_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/txt_question_two"
            app:layout_constraintTop_toBottomOf="@+id/txt_question_two">

            <RadioButton
                android:id="@+id/questionTwo_OptionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OptionsTextStyle"
                android:text="@string/questionTwo_optionOne" />

            <RadioButton
                android:id="@+id/questionTwo_OptionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OptionsTextStyle"
                android:text="@string/questionTwo_optionTwo" />

            <RadioButton
                android:id="@+id/questionTwo_OptionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OptionsTextStyle"
                android:text="@string/questionTwo_optionThree" />

        </RadioGroup>

        <View
            android:id="@+id/divider_two"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/rbtn_question_two"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txt_questionNumber_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_number_three"
            style="@style/QuestionNumberStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_two" />

        <TextView
            android:id="@+id/txt_question_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/question_three_text"
            style="@style/QuestionsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_questionNumber_three"
            app:layout_constraintTop_toTopOf="@+id/txt_questionNumber_three" />

        <RadioGroup
            android:id="@+id/rbtn_question_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/txt_question_three"
            app:layout_constraintTop_toBottomOf="@+id/txt_question_three">

            <RadioButton
                android:id="@+id/questionThree_OptionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OptionsTextStyle"
                android:text="@string/questionThree_optionOne" />

            <RadioButton
                android:id="@+id/questionThree_OptionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                style="@style/OptionsTextStyle"
                android:text="@string/questionThree_optionTwo" />

            <RadioButton
                android:id="@+id/questionThree_OptionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                style="@style/OptionsTextStyle"
                android:text="@string/questionThree_optionThree" />
        </RadioGroup>

        <View
            android:id="@+id/divider_three"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/rbtn_question_three"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txt_questionNumber_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_number_four"
            style="@style/QuestionNumberStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_three" />

        <TextView
            android:id="@+id/txt_question_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/question_four_text"
            style="@style/QuestionsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_questionNumber_four"
            app:layout_constraintTop_toTopOf="@+id/txt_questionNumber_four" />

        <RadioGroup
            android:id="@+id/rbtn_question_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/txt_question_four"
            app:layout_constraintTop_toBottomOf="@+id/txt_question_four">

            <RadioButton
                android:id="@+id/questionFour_OptionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OptionsTextStyle"
                android:text="@string/questionFour_optionOne" />

            <RadioButton
                android:id="@+id/questionFour_OptionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                style="@style/OptionsTextStyle"
                android:text="@string/questionFour_optionTwo" />

            <RadioButton
                android:id="@+id/questionFour_OptionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                style="@style/OptionsTextStyle"
                android:text="@string/questionFour_optionThree" />
        </RadioGroup>

        <View
            android:id="@+id/divider_four"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/rbtn_question_four"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txt_questionNumber_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_number_five"
            style="@style/QuestionNumberStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_four" />

        <TextView
            android:id="@+id/txt_question_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/question_five_text"
            style="@style/QuestionsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_questionNumber_five"
            app:layout_constraintTop_toTopOf="@+id/txt_questionNumber_five" />

        <CheckBox
            android:id="@+id/chkbox_question_optionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/OptionsTextStyle"
            android:text="@string/questionFive_optionOne"
            app:layout_constraintStart_toStartOf="@+id/txt_question_five"
            app:layout_constraintTop_toBottomOf="@+id/txt_question_five"/>

        <CheckBox
            android:id="@+id/chkbox_question_optionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/OptionsTextStyle"
            android:text="@string/questionFive_optionTwo"
            app:layout_constraintStart_toStartOf="@+id/chkbox_question_optionOne"
            app:layout_constraintTop_toBottomOf="@+id/chkbox_question_optionOne" />

        <CheckBox
            android:id="@+id/chkbox_question_optionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/OptionsTextStyle"
            android:text="@string/questionFive_optionThree"
            app:layout_constraintEnd_toEndOf="@+id/txt_question_five"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/chkbox_question_optionTwo"
            app:layout_constraintTop_toBottomOf="@+id/chkbox_question_optionTwo" />

        <View
            android:id="@+id/divider_five"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/chkbox_question_optionThree"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txt_questionNumber_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_number_six"
            style="@style/QuestionNumberStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_five" />

        <TextView
            android:id="@+id/txt_question_six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/question_six_text"
            style="@style/QuestionsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_questionNumber_six"
            app:layout_constraintTop_toTopOf="@+id/txt_questionNumber_six" />

        <EditText
            android:id="@+id/questionSix_txt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/OptionsTextStyle"
            app:layout_constraintEnd_toEndOf="@+id/txt_question_six"
            app:layout_constraintStart_toStartOf="@+id/txt_question_six"
            app:layout_constraintTop_toBottomOf="@id/txt_question_six" />

        <View
            android:id="@+id/divider_six"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/questionSix_txt"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/submitButtonText"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_six"
            android:onClick="displayQuizScore"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>